metadata-classic/objects/MarketplaceIntegrityArticle__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Article type to manage marketplace integrity articles; visiblity of articles locked down to Marketplace Integrity profile / permission set.</description>
    <fields>
        <fullName>KBContent__c</fullName>
        <description>Knowledge article content.</description>
        <label>KB Content</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>KnowledgePointofContact__c</fullName>
        <description>Open text area of the content manager to add in the person&apos;s name and department of who the subject matter expert is for the article text.</description>
        <inlineHelpText>Please enter the name and department of the person who you are working with to compile the knowledge article.</inlineHelpText>
        <label>Knowledge Point of Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedContent__c</fullName>
        <description>Related content to the knowledge article.</description>
        <label>Related Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Marketplace Integrity Article</label>
    <pluralLabel>Marketplace Integrity Articles</pluralLabel>
</CustomObject>